--- a/style.css
+++ b/style.css
@@ -26,7 +26,14 @@ nav {
   border-radius: 6px;
   box-shadow: 0px 0px 4px rgb(82, 100, 110);
 }
-h1,
+h1 {
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #e8e8e8;
+  border-bottom: 1px solid #00adb5;
+  background-color: #1f1f1f;
+  margin: 0;
+}
 h3 {
   background-color: #1f1f1f;
 }
