--- a/style.css
+++ b/style.css
@@ -30,22 +30,21 @@ h1 {
   color: #e8e8e8;
   font-size: 1.5rem;
   font-weight: 800;
-  border-bottom: 1px solid #739799;
   background-color: #1f1f1f;
   margin: 0;
 }
 h3 {
   color: #e8e8e8;
-  background-color: #1f1f1f;
+  background-color: #52525b;
 }
 .new-resolution-container {
   height: 50px;
-  border: 1px solid #333333;
+  border: none;
   display: flex;
   gap: 10px;
   justify-content: center;
   align-items: center;
-  background-color: #1f1f1f;
+  background-color: #52525b;
   border-radius: 5px;
   padding: 6px;
   box-shadow: 0px 0px 4px rgb(72, 135, 172);
@@ -60,21 +59,21 @@ h3 {
   border-radius: 5px;
 }
 #buscador {
+  background-color: #52525b;
   padding: 15px;
   width: 100%;
-  border: 1px solid #333333;
+  border: none;
   border-radius: 5px;
-  background-color: #1f1f1f;
   color: #e8e8e8;
 }
 .icono {
   position: absolute;
   right: 10px;
   color: #00adb5;
-  background-color: #1f1f1f;
+  background-color: #52525b;
 }
 i {
-  background-color: #1f1f1f;
+  background-color: #52525b;
   color: #00adb5;
 }
 
