--- a/style.css
+++ b/style.css
@@ -179,3 +179,53 @@ main {
     width: 85px;
   }
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(54, 54, 54, 0.5);
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.modal-content {
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  gap: 10px;
+}
+#meter-resolution {
+  padding: 10px;
+  border: none;
+  background-color: darkred;
+  width: 80px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.close:hover {
+  background-color: red;
+}
+.modal-content {
+  input {
+    padding: 10px;
+    width: 170px;
+  }
+}
